--- a/services.html
+++ b/services.html
@@ -303,7 +303,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay muted loop>
-                    <source src="assets/img/service/Video/digital.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/digitalmarketing.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -334,7 +334,7 @@
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="request-quote">GET FREE QUATE</a>
-                                    <a class="default__button" href="contact">Contact Us</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </ul>
                             </div>
                         </div>
@@ -654,41 +654,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="3000">
-                        <div
-                            class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
-                            <div class="service__single__inner">
-                                <div class="service__img">
-                                    <img src="assets/img/service/services_2/game.png" alt="">
-                                </div>
-                                <div class="service__content">
-                                    <div class="service__heading">
-                                        <h5><a href="service-details.html">Game Development</a></h5>
-                                    </div>
-                                    <div class="service__text">
-                                        <p>Digital Minds On excels in game development, creating immersive, engaging,
-                                            and innovative gaming experiences using advanced technologies to captivate
-                                            players across platforms worldwide.</p>
-                                    </div>
-
-                                </div>
-                                <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="service-details.html"><svg width="34" height="34"
-                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
-                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
-                                                stroke-linejoin="round" />
-                                            <path d="M10.9902 23.0107L22.8908 11.1101" stroke="#0A0624"
-                                                stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
-                                                stroke-linejoin="round" />
-                                        </svg>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-
-
                 </div>
             </div>
 
