--- a/faq.html
+++ b/faq.html
@@ -308,7 +308,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
                                     <li> Question & Answer </li>
                                 </ul>
@@ -692,11 +692,6 @@
                                                             updates.</p>
                                                     </div>
                                                 </div>
-                                                <!-- <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                                    <div class="accordion__img">
-                                                        <img src="assets/img/contact/contact__2.png" alt="">
-                                                    </div>
-                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
