--- a/services.html
+++ b/services.html
@@ -682,6 +682,13 @@
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
                                     <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
                                         <p>“Digital Minds On UI team demonstrated exceptional skill in grasping the
                                             functionality of our previous site and our needs for the new one. Their
                                             extensive web development expertise resulted in personalized and effective
@@ -701,7 +708,15 @@
 
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
+                                  
                                     <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
                                         <p>“Digital Minds On created a leading app for the client, attracting 1.5
                                             million users. The team consistently meets sprint goals and demonstrates
                                             exceptional project management. They are collaborative, supportive,
@@ -722,6 +737,13 @@
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
                                     <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
                                         <p>“The client is pleased with Digital Minds On's performance. They successfully
                                             established the system's foundation, meeting expectations. Their effective
                                             project management ensures timely task delivery and prompt issue resolution,
@@ -742,6 +764,13 @@
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
                                     <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
                                         <p>“Although the application is not yet launched, the client was extremely
                                             pleased with Digital Minds On. Their timely, organized, and proactive team
                                             demonstrated outstanding communication and professionalism throughout the
@@ -761,7 +790,15 @@
 
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
+                                 
                                     <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
                                         <p>“The client was thoroughly impressed with the WordPress development services.
                                             The team showcased exceptional skills, delivering a well-organized and
                                             timely project. Their proactive communication and professionalism made the
