--- a/about.html
+++ b/about.html
@@ -314,7 +314,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
                                     <li>About us</li>
                                 </ul>
