--- a/content-creater.html
+++ b/content-creater.html
@@ -222,6 +222,13 @@
             </div>
             <div class="mob_menu_wrapper container-fluid">
                 <div class="d-flex justify-content-between align-items-center">
+                    <div class="mobile__log">
+                        <a class="offcanvas__logo_link" href="/">
+                            <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
+                            <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                                class="light-mode">
+                        </a>
+                    </div>
                     <div class="offcanvas__header--menu__open ">
                         <a class="offcanvas__header--menu__open--btn" href="javascript:void(0)" data-offcanvas>
                             <svg xmlns="http://www.w3.org/2000/svg" class="ionicon offcanvas__header--menu__open--svg"
@@ -232,14 +239,6 @@
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
                     </div>
-                    <div class="mobile__log">
-                        <div class="mobile__log--title"><a class="mobile__log--link" href="index">
-                                <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
-                            </a></div>
-                    </div>
-
-
-
                 </div>
             </div>
         </header>
