--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -220,6 +220,13 @@
             </div>
             <div class="mob_menu_wrapper container-fluid">
                 <div class="d-flex justify-content-between align-items-center">
+                    <div class="mobile__log">
+                        <a class="offcanvas__logo_link" href="/">
+                            <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
+                            <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                                class="light-mode">
+                        </a>
+                    </div>
                     <div class="offcanvas__header--menu__open ">
                         <a class="offcanvas__header--menu__open--btn" href="javascript:void(0)" data-offcanvas>
                             <svg xmlns="http://www.w3.org/2000/svg" class="ionicon offcanvas__header--menu__open--svg"
@@ -229,11 +236,6 @@
                             </svg>
                             <span class="visually-hidden">Offcanvas Menu Open</span>
                         </a>
-                    </div>
-                    <div class="mobile__log">
-                        <div class="mobile__log--title"><a class="mobile__log--link" href="index">
-                                <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
-                            </a></div>
                     </div>
 
 
@@ -382,31 +384,36 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="web-development-services">Web Development
+                                            <a class="sidebar__common__input" href="web-development-services">Web
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="software-development-services">Software Development
+                                            <a class="sidebar__common__input"
+                                                href="software-development-services">Software Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="mobile-app-development-services">App Development
+                                            <a class="sidebar__common__input" href="mobile-app-development-services">App
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital Marketing
+                                            <a class="sidebar__common__input" href="digital-marketing-services">Digital
+                                                Marketing
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="wordpress-development-services">WordPress Development
+                                            <a class="sidebar__common__input"
+                                                href="wordpress-development-services">WordPress Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -417,7 +424,8 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="sidebar__common__input" href="game-development-services">Game Development
+                                            <a class="sidebar__common__input" href="game-development-services">Game
+                                                Development
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
