--- a/project-details.html
+++ b/project-details.html
@@ -309,7 +309,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
                                     <li> Project </li>
                                 </ul>
