--- a/project.html
+++ b/project.html
@@ -338,7 +338,7 @@
                                             Consulting</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -364,7 +364,7 @@
                                     <h3><a href="https://app.thepathfinderhub.com/">Resume Builder</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -391,7 +391,7 @@
                                             ShortlistMe</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -417,7 +417,7 @@
                                     <h3><a href="https://superbullionwire.com/">Super Bullion Wire</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -444,7 +444,7 @@
                                             UK | Cork & Dublin</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -471,7 +471,7 @@
                                             Cork & Beyond | Amber Oil</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -498,7 +498,7 @@
                                             MCCI</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -524,7 +524,7 @@
                                     <h3><a href="https://www.ikc.ie/">Home | The Irish Kennel Club</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
