--- a/request-quote.html
+++ b/request-quote.html
@@ -389,9 +389,9 @@
                 <div class="col-xl-6 col-lg-7">
                     <div class="page__banner-content">
                         <h2>Request Quote</h2>
-                        <span><a href="index.html" style="color: #ffff;">Home</a>
-                            <span><a style="color:#5127E8;">|</a></span>
-                            <a style="color: #5127E8">Request Quote</a>
+                        <span><a href="/">Home</a>
+                            <span style="color: #fff;"> // </span>
+                            <span style="color: #fff;">Request Quote</span>
                         </span>
                     </div>
                 </div>
