--- a/team.html
+++ b/team.html
@@ -839,13 +839,13 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="blog-details">What is UI/UX Design?</a></h6>
+                                <h6><a href="ui-ux-design">What is UI/UX Design?</a></h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>UI/UX design stands for User Interface (UI) and User Experience (UX) Design.</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="blog-details">READ MORE</a>
+                                <a class="default__button btn__black" href="ui-ux-design">READ MORE</a>
                             </div>
                         </div>
                     </div>
@@ -858,13 +858,13 @@
                                 <p><span class="text__gradient ">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="blog-details">What is Web Development?</a></h6>
+                                <h6><a href="web-development-services">What is Web Development?</a></h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>Web development is the process of creating and maintaining websites...</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="blog-details">READ MORE</a>
+                                <a class="default__button btn__black" href="web-development-services">READ MORE</a>
                             </div>
                         </div>
                     </div>
