full page image css add

--- a/project.html
+++ b/project.html
@@ -327,10 +327,11 @@
         <div class="all__project sp_top_140 sp_bottom_140 special__spacing">
             <div class="container">
                 <div class="row">
+
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/roi.224.png" alt="img">
+                                <img src="assets/img/full-page/screencapture-roilevelup-2024-12-01-04_42_17.png" alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -354,10 +355,10 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1700">
+                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1700" loading="lazy">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/resume-builder.328.png" alt="img">
+                                <img src="assets/img/full-page/screencapture-app-thepathfinderhub-2024-12-01-04_43_17.png" alt="img">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -383,7 +384,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/shortlistme.405.png" alt="img">
+                                <img src="assets/img/full-page/screencapture-shortlistme-2024-12-01-04_43_51.png" alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -410,7 +411,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/super.720.png" alt="img">
+                                <img src="assets/img/full-page/screencapture-superbullionwire-2024-12-01-04_44_26.png" alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -436,7 +437,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2300">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/global-wordpress.689.png" alt="img">
+                                <img src="assets/img/full-page/screencapture-peglobal-net-2024-12-01-04_45_39.png" alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -463,7 +464,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/amberoil.732.png" alt="img">
+                                <img src="assets/img/full-page/screencapture-amberoil-ie-2024-12-01-04_46_12.png" alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -490,7 +491,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2700">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/mcc.Screenshot - 2024-11-26T231713.248.png" alt="images">
+                                <img src="assets/img/full-page/screencapture-mcci-ie-2024-12-01-04_46_48.png" alt="images" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -517,7 +518,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/1122.Screenshot - 2024-11-26T231854.979.png" alt="image">
+                                <img src="assets/img/full-page/screencapture-ikc-ie-2024-12-01-04_48_06.png" alt="image" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
