project page fixed

--- a/project.html
+++ b/project.html
@@ -331,7 +331,8 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-roilevelup-2024-12-01-04_42_17.png" alt="img" loading="lazy">
+                                <img src="assets/img/full-page/screencapture-roilevelup-2024-12-01-04_42_17.png"
+                                    alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -339,8 +340,8 @@
                                             Consulting</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
-                                            height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://roilevelup.com/"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -355,19 +356,21 @@
                         </div>
                     </div>
 
-                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1700" loading="lazy">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1700"
+                        loading="lazy">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-app-thepathfinderhub-2024-12-01-04_43_17.png" alt="img">
+                                <img src="assets/img/full-page/screencapture-app-thepathfinderhub-2024-12-01-04_43_17.png"
+                                    alt="img">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
                                     <h3><a href="https://app.thepathfinderhub.com/">Resume Builder</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
-                                            height="34" viewBox="0 0 34 34" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn direction__btn--2"
+                                        href="https://app.thepathfinderhub.com/"><svg width="34" height="34"
+                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -384,7 +387,8 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-shortlistme-2024-12-01-04_43_51.png" alt="img" loading="lazy">
+                                <img src="assets/img/full-page/screencapture-shortlistme-2024-12-01-04_43_51.png"
+                                    alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -392,8 +396,8 @@
                                             ShortlistMe</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
-                                            height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://shortlistme.com/"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -411,16 +415,17 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-superbullionwire-2024-12-01-04_44_26.png" alt="img" loading="lazy">
+                                <img src="assets/img/full-page/screencapture-superbullionwire-2024-12-01-04_44_26.png"
+                                    alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
                                     <h3><a href="https://superbullionwire.com/">Super Bullion Wire</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
-                                            height="34" viewBox="0 0 34 34" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn direction__btn--2"
+                                        href="https://superbullionwire.com/"><svg width="34" height="34"
+                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -437,7 +442,8 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2300">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-peglobal-net-2024-12-01-04_45_39.png" alt="img" loading="lazy">
+                                <img src="assets/img/full-page/screencapture-peglobal-net-2024-12-01-04_45_39.png"
+                                    alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -445,8 +451,8 @@
                                             UK | Cork & Dublin</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
-                                            height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://www.peglobal.net/"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -464,7 +470,8 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-amberoil-ie-2024-12-01-04_46_12.png" alt="img" loading="lazy">
+                                <img src="assets/img/full-page/screencapture-amberoil-ie-2024-12-01-04_46_12.png"
+                                    alt="img" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -472,8 +479,8 @@
                                             Cork & Beyond | Amber Oil</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
-                                            height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://www.amberoil.ie/"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -491,7 +498,8 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2700">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-mcci-ie-2024-12-01-04_46_48.png" alt="images" loading="lazy">
+                                <img src="assets/img/full-page/screencapture-mcci-ie-2024-12-01-04_46_48.png"
+                                    alt="images" loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -499,8 +507,8 @@
                                             MCCI</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
-                                            height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://www.mcci.ie/"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -518,15 +526,16 @@
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/full-page/screencapture-ikc-ie-2024-12-01-04_48_06.png" alt="image" loading="lazy">
+                                <img src="assets/img/full-page/screencapture-ikc-ie-2024-12-01-04_48_06.png" alt="image"
+                                    loading="lazy">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
                                     <h3><a href="https://www.ikc.ie/">Home | The Irish Kennel Club</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="project-details"><svg width="34"
-                                            height="34" viewBox="0 0 34 34" fill="none"
+                                    <a class="direction__btn direction__btn--2" href="https://www.ikc.ie/"><svg
+                                            width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -891,23 +900,23 @@
     <script src="assets/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lazysizes/5.3.2/lazysizes.min.js" async></script>
     <!-- lazay load -->
-        <script>
-            document.addEventListener("DOMContentLoaded", () => {
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
             const lazyImages = document.querySelectorAll(".lazy-image");
             const observer = new IntersectionObserver((entries, observer) => {
                 entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    const img = entry.target;
-                    img.src = img.dataset.src; 
-                    img.classList.remove("lazy-image");
-                    observer.unobserve(img);
-                }
+                    if (entry.isIntersecting) {
+                        const img = entry.target;
+                        img.src = img.dataset.src;
+                        img.classList.remove("lazy-image");
+                        observer.unobserve(img);
+                    }
                 });
             });
-        
+
             lazyImages.forEach(img => observer.observe(img));
-            });
-        </script>
+        });
+    </script>
     <!-- back to top -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
